Update index.html to replace emoji icons with image assets for toggle buttons and comment out border-radius and transform properties for styling adjustments.

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             height: 60px;
             background-color: #3498db;
             color: white;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -285,7 +285,7 @@
 
         #notes-toggle:hover {
             background-color: #2980b9;
-            transform: scale(1.1);
+            /* transform: scale(1.1); */
         }
 
         #notes-count {
@@ -589,7 +589,7 @@
             height: 60px;
             background-color: #9b59b6;
             color: white;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -603,7 +603,7 @@
 
         #bluetooth-toggle:hover {
             background-color: #8e44ad;
-            transform: scale(1.1);
+            /* transform: scale(1.1); */
         }
 
         #bluetooth-count {
@@ -850,7 +850,7 @@
             height: 60px;
             background-color: #2ecc71;
             color: white;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -864,7 +864,7 @@
 
         #biometrics-toggle:hover {
             background-color: #27ae60;
-            transform: scale(1.1);
+            /* transform: scale(1.1); */
         }
 
         #biometrics-count {
@@ -1139,15 +1139,15 @@
     <!-- Toggle Buttons Container -->
     <div id="toggle-buttons-container">
         <div id="notes-toggle">
-            <span>📝</span>
+            <img src="assets/objects/notes.png" alt="Notes" style="width: 64px; height: 64px;">
             <div id="notes-count">0</div>
         </div>
         <div id="bluetooth-toggle" style="display: none;">
-            <span>📡</span>
+            <img src="assets/objects/bluetooth_scanner.png" alt="Bluetooth" style="width: 64px; height: 64px;">
             <div id="bluetooth-count">0</div>
         </div>
         <div id="biometrics-toggle" style="display: none;">
-            <span>👆</span>
+            <img src="assets/objects/fingerprint.png" alt="Biometrics" style="width: 64px; height: 64px;">
             <div id="biometrics-count">0</div>
         </div>
     </div>
