Update font-family in index.html to include 'VT323' alongside 'Press Start 2P' for enhanced typography consistency.

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
             transform-origin: center; /* Set the origin for scaling */
         }
         body {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', 'VT323', cursive;
         }
 
         /* Mobile device detection and responsive scaling */
