--- a/index.html
+++ b/index.html
@@ -181,12 +181,13 @@
         }
         
         #notes-search {
-            width: 100%;
+            width: 95%;
             padding: 8px 10px;
             border: none;
             background-color: #222;
             color: white;
-            font-size: 14px;
+            font-size: 20px;
+            font-family: 'VT323', monospace;
         }
         
         #notes-search:focus {
