Refactor font-family declarations in index.html: set 'VT323' for body and 'Press Start 2P' for headings to improve typography consistency. Also don't incl observations if undefined in the scenario.

--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,10 @@
             transform-origin: center; /* Set the origin for scaling */
         }
         body {
-            font-family: 'Press Start 2P', 'VT323';
+            font-family: 'VT323';
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Press Start 2P';
         }
 
         /* Mobile device detection and responsive scaling */
@@ -3155,7 +3158,9 @@
             }
             
             let message = `${data.name}\n\n`;
-            message += `Observations: ${data.observations}\n\n`;
+            if (data.observations) {
+                message += `Observations: ${data.observations}\n\n`;
+            }
             
             if (data.readable && data.text) {
                 message += `Text: ${data.text}\n\n`;
